@@ -31,6 +31,7 @@ export(plot)
 export(read.beast)
 export(read.codeml)
 export(read.codeml_mlc)
+export(read.hyphy)
 export(read.jplace)
 export(read.paml_rst)
 export(theme_tree)
