@@ -1,11 +1,19 @@
-## tree <- read.tree("labelledtree.tree")
-## nex <- read.nexus("ancseq.nex")
-
-## ancseq <- "ancseq.nex"
-## tree <- "labelledtree.tree"
-
+##' read HYPHY output
+##'
+##'
+##' @title read.hyphy
+##' @param nwk tree file in nwk format, one of hyphy output
+##' @param ancseq ancestral sequence file in nexus format,
+##'               one of hyphy output
+##' @param tip.fasfile tip sequence file
+##' @importFrom Biostrings readBStringSet
+##' @importFrom Biostrings toString
+##' @export
+##' @author Guangchuang Yu \url{http://ygc.name}
+##' @examples
 ##' nwk <- system.file("extdata/HYPHY", "labelledtree.tree", package="ggtree")
 ##' ancseq <- system.file("extdata/HYPHY", "ancseq.nex", package="ggtree")
+##' read.hyphy(nwk, ancseq)
 read.hyphy <- function(nwk, ancseq, tip.fasfile=NULL) {
     anc <- scan(ancseq, what="", sep="\n", quiet=TRUE)
     end <- grep("END;", anc)
@@ -31,6 +39,69 @@ read.hyphy <- function(nwk, ancseq, tip.fasfile=NULL) {
     nl[nl == ""] <- "Node1"
     tr$node.label <- nl
 
-    
+    type <- get_seqtype(seq)
+    fields <- "subs"
+    if (type == "NT") {
+        fields <- c(fields, "AA_subs")
+    }
+
+    res <- new("hyphy",
+               fields = fields,
+               treetext = scan(nwk, what='', quiet=TRUE),
+               phylo = tr,
+               seq_type = type,
+               ancseq = seq,
+               tree.file = nwk,
+               ancseq.file = ancseq
+               )
+
+    if ( !is.null(tip.fasfile) ) {
+        tip_seq <- readBStringSet(tip.fasfile)
+        tip_seq <- sapply(seq_along(tip_seq), function(i) {
+            toString(tip_seq[i])
+        })
+        res@tip_seq <- tip_seq
+        res@tip.fasfile <- tip.fasfile
+    }
+    set.hyphy_(res)
+}
+
+##' @rdname get.fields-methods
+##' @exportMethod get.fields
+setMethod("get.fields", signature(object = "hyphy"),
+          function(object) {
+              if(length(object@tip_seq) == 0) {
+                  warning("tip sequence not available...\n")
+              } else {
+                  object@fields
+              }
+          })
+
+
+set.hyphy_ <- function(object, ...) {
+    if (!is(object, "hyphy")) {
+        stop("object should be an instance of 'hyphy'")
+    }
+
+    if (length(object@tip_seq) == 0) {
+        return(object)
+    }
+
+    types <- get.fields(object)
+    seqs <- c(object@tip_seq, object@ancseq)
+    for (type in types) {
+        if (type == "subs") {
+            translate <- FALSE
+        } else {
+            translate <- TRUE
+        }
+        subs <- get.subs_(object@phylo, seqs, translate, ...)
+        if (type == "subs") {
+            object@subs <- subs
+        } else {
+            object@AA_subs <- subs
+        }
+    }
+    return(object)
 }
 
